--- a/Glass/Vue/Producao/Templates/LstProducao.Pecas.html
+++ b/Glass/Vue/Producao/Templates/LstProducao.Pecas.html
@@ -5,7 +5,7 @@
             <th>Pedido</th>
             <th>Tipo Ped.</th>
             <th v-if="configuracoes.exibirNumeroEtiquetaNoInicioDaTabela">
-                Etiqueta
+                <a href="#" v-on:click.prevent="ordenar('numeroEtiquetaPeca')">Etiqueta</a>
             </th>
             <th>Pedido Cli.</th>
             <th>Cliente</th>
@@ -16,56 +16,58 @@
                 {{ setor.nome }}
             </th>
             <th v-if="!configuracoes.controleReposicaoPorPeca">
-                Perda
+                <a href="#" v-on:click.prevent="ordenar('dataPerda')">Perda</a>
             </th>
             <th v-if="configuracoes.usarDataFabrica">
-                Pronto Fábrica
+                <a href="#" v-on:click.prevent="ordenar('dataEntregaFabrica')">Pronto Fábrica</a>
             </th>
             <th v-else>
-                Prev. Entrega
+                <a href="#" v-on:click.prevent="ordenar('dataEntrega')">Prev. Entrega</a>
             </th>
             <th v-if="configuracoes.empresaLiberaPedido">
-                Data Lib.
+                <a href="#" v-on:click.prevent="ordenar('dataLiberacaoPedido')">Data Lib.</a>
             </th>
-            <th>Plano Corte</th>
+            <th>
+                <a href="#" v-on:click.prevent="ordenar('planoCorte')">Plano Corte</a>
+            </th>
             <th v-if="!configuracoes.exibirNumeroEtiquetaNoInicioDaTabela">
-                Etiqueta
+                <a href="#" v-on:click.prevent="ordenar('numeroEtiquetaPeca')">Etiqueta</a>
             </th>
             <th v-if="configuracoes.empresaControlaCavaletes">
-                Cavalete
+                <a href="#" v-on:click.prevent="ordenar('numeroCavalete')">Cavalete</a>
             </th>
         </template>
         <template slot="item" slot-scope="{ item, index }">
             <td style="white-space: nowrap">
                 <button v-on:click.prevent="alternarExibicaoFilhos(index)" v-if="item.produtoPedido && item.produtoPedido.composicao">
-                    <img src="/Images/mais.gif" v-bind:title="(exibindoFilhos(index) ? 'Esconder' : 'Exibir') + ' Produtos da Composição'" />
+                    <img src="../../Images/mais.gif" v-bind:title="(exibindoFilhos(index) ? 'Esconder' : 'Exibir') + ' Produtos da Composição'" />
                 </button>
                 <button v-on:click.prevent="desfazerUltimaLeituraPeca(item)" v-if="item.permissoes && item.permissoes.desfazerLeitura">
-                    <img src="/Images/arrow_undo.gif" title="Remover peça desta situação" />
+                    <img src=../../Images/arrow_undo.gif" title="Remover peça desta situação" />
                 </button>
                 <button v-on:click.prevent="abrirRelatorioPedido(item)" v-if="exibirRelatorioPedido(item)">
-                    <img src="/Images/Relatorio.gif" title="Relatório de pedido" />
+                    <img src="../../Images/Relatorio.gif" title="Relatório de pedido" />
                 </button>
                 <button v-on:click.prevent="abrirRelatorioPedidoPcp(item)" v-if="exibirRelatorioPedidoPcp(item)">
-                    <img src="/Images/script_go.gif" title="Relatório de pedido conferência" />
+                    <img src="../../Images/script_go.gif" title="Relatório de pedido conferência" />
                 </button>
                 <button v-on:click.prevent="abrirAnexosPedido(item)" v-if="item && item.pedido">
-                    <img src="/Images/Clipe.gif" title="Anexos do pedido" />
+                    <img src="../../Images/Clipe.gif" title="Anexos do pedido" />
                 </button>
                 <controle-exibicao-imagem v-bind:id-item="item.id" tipo-item="PecaProducao" v-if="!item.possuiImagemSvg"></controle-exibicao-imagem>
                 <controle-imagem-projeto v-bind:id-item="item.produtoPedido.id" v-else-if="item.produtoPedido && item.possuiImagemSvg"></controle-imagem-projeto>
                 <log-alteracao v-bind:id-item="item.id" tabela="ProdPedProducao" v-bind:atualizar-ao-alterar="false" v-if="item && item.permissoes && item.permissoes.logAlteracoes"></log-alteracao>
                 <button v-on:click.prevent="pararPecaProducao(item)" v-if="item && item.permissoes && item.permissoes.pararPecaProducao">
-                    <img src="/Images/stop_red.png" title="Retornar peça para produção" style="height: 16px" v-if="item && item.situacaoProducao && item.situacaoProducao.pecaParada" />
-                    <img src="/Images/stop_blue.png" title="Parar peça na produção" style="height: 16px" v-else />
+                    <img src="../../Images/stop_red.png" title="Retornar peça para produção" style="height: 16px" v-if="item && item.situacaoProducao && item.situacaoProducao.pecaParada" />
+                    <img src="../../Images/stop_blue.png" title="Parar peça na produção" style="height: 16px" v-else />
                 </button>
                 <button v-on:click.prevent="abrirDetalhesReposicao(item)" v-if="item && item.situacaoProducao && item.situacaoProducao.pecaReposta">
-                    <img src="/Images/Nota.gif" title="Detalhes Reposição Peça" />
+                    <img src="../../Images/Nota.gif" title="Detalhes Reposição Peça" />
                 </button>
                 <button v-on:click.prevent="abrirLogEstornoCarregamento(item)" v-if="item && item.permissoes && item.permissoes.logEstornoCarregamento">
-                    <img src="/Images/log_delete.jpg" title="Exibir log de estorno de carregamento" />
+                    <img src="../../Images/log_delete.jpg" title="Exibir log de estorno de carregamento" />
                 </button>
-                <img src="/Images/exclamation.gif" title="Essa peça tem leitura em ao menos um setor oculto (Não exibido na consulta)"
+                <img src="../../Images/exclamation.gif" title="Essa peça tem leitura em ao menos um setor oculto (Não exibido na consulta)"
                     v-if="item && item.situacaoProducao && item.situacaoProducao.possuiLeituraSetorOculto" />
             </td>
             <td v-bind:style="{ color: item.corLinha }">
@@ -125,7 +127,7 @@
                     </div>
                 </template>
                 <div v-else-if="leitura.setor && !leitura.setor.obrigatorio" style="text-align: center; opacity: 0.5; filter: alpha(opacity=50)">
-                    <img src="/Images/alerta.png" alt="Setor não faz parte do roteiro de produção"
+                    <img src="../../Images/alerta.png" alt="Setor não faz parte do roteiro de produção"
                         title="Setor não faz parte do roteiro de produção, portanto não necessita ser lido" />
                 </div>
             </td>
