--- a/Glass/Style/GridView.css
+++ b/Glass/Style/GridView.css
@@ -14,6 +14,15 @@
   .gridStyle tr {
     border-top: solid #ddd 1px;
   }
+
+  .gridStyle td .gridStyle {
+    margin: 8px 0;
+  }
+
+    .gridStyle td .gridStyle thead tr:first-child {
+      border-top: none;
+    }
+
   /*.gridStyle tr:first-child { border-top: none; }*/
   .gridStyle td {
     padding: 3px 6px;
