#1048 - Refatoração da listagem de CFOP.

--- a/Glass/Vue/Cfops/Templates/LstCfops.Filtro.html
+++ b/Glass/Vue/Cfops/Templates/LstCfops.Filtro.html
@@ -7,7 +7,7 @@
         </span>
         <span class="form-group">
             <label>Descrição</label>
-            <input id="nomeCliente" type="text" v-model="filtroAtual.descricao" style="width: 200px" />
+            <input id="descricao" type="text" v-model="filtroAtual.descricao" style="width: 200px" />
             <button class="botaoPesquisar" v-on:click.prevent="filtrar" title="Pesquisar"></button>
         </span>
     </div>
