--- a/Glass/Vue/_Compartilhado/Templates/CampoCnpj.html
+++ b/Glass/Vue/_Compartilhado/Templates/CampoCnpj.html
@@ -1,4 +1,5 @@
 ﻿<span style="white-space: nowrap">
-    <campo-com-mascara ref="campo" v-bind:valor.sync="cnpjAtual" v-bind:mascara="[/\d/, /\d/, '.', /\d/, /\d/, /\d/, '.', /\d/, /\d/, /\d/, '/', /\d/, /\d/, /\d/, /\d/, '-', /\d/, /\d/]"
-        pattern="\d{2}.\d{3}.\d{3}/\d{3}-\d{2}" v-bind="$attrs" style="width: 120px"></campo-com-mascara>
+    <campo-com-mascara ref="campo" v-bind:valor.sync="cnpjAtual"
+        v-bind:mascara="[/\d/, /\d/, '.', /\d/, /\d/, /\d/, '.', /\d/, /\d/, /\d/, '/', /\d/, /\d/, /\d/, /\d/, '-', /\d/, /\d/]"
+        pattern="\d{2}.\d{3}.\d{3}/\d{4}-\d{2}" v-bind="$attrs" style="width: 120px"></campo-com-mascara>
 </span>
