--- a/Glass/Vue/_Compartilhado/Templates/CampoCpf.html
+++ b/Glass/Vue/_Compartilhado/Templates/CampoCpf.html
@@ -1,4 +1,5 @@
 ﻿<span style="white-space: nowrap">
-    <campo-com-mascara ref="campo" v-bind:valor.sync="cpfAtual" v-bind:mascara="[/\d/, /\d/, /\d/, '.', /\d/, /\d/, /\d/, '.', /\d/, /\d/, /\d/, '-', /\d/, /\d/]"
-        pattern="\d{3}.\d{3}.\d{3}-\d{2}" v-bind="$attrs" style="width: 150px"></campo-com-mascara>
+    <campo-com-mascara ref="campo" v-bind:valor.sync="cpfAtual"
+        v-bind:mascara="[/\d/, /\d/, /\d/, '.', /\d/, /\d/, /\d/, '.', /\d/, /\d/, /\d/, '-', /\d/, /\d/]"
+        pattern="\d{3}.\d{3}.\d{3}-\d{2}" v-bind="$attrs" style="width: 95px"></campo-com-mascara>
 </span>
