#84018 -  Foi implementada a integração da geração de nota fiscal com o sistema de Khan

--- a/Glass/Vue/Integracao/Integradores/Templates/LstIntegradores.Configuracao.html
+++ b/Glass/Vue/Integracao/Integradores/Templates/LstIntegradores.Configuracao.html
@@ -26,8 +26,8 @@
                                 </div>
                             </td>
                             <td class="col entradas-col_valor">
-                                <div v-if="!editando" class="markdown">{{entrada.valor}}</div>
-                                <input v-if="editando" type="text" class="" title="" v-model="entrada.valor" />
+                                <div v-if="!editando || entrada.somenteLeitura" class="markdown">{{entrada.valor}}</div>
+                                <input v-if="editando && !entrada.somenteLeitura" type="text" class="" title="" v-model="entrada.valor" />
                             </td>
                         </tr>
                     </tbody>
