--- a/Glass/Vue/Integracao/Integradores/Templates/LstIntegradores.Integrador.html
+++ b/Glass/Vue/Integracao/Integradores/Templates/LstIntegradores.Integrador.html
@@ -50,6 +50,21 @@
         </span>
         <span>
             <div class="opblock-tag-section">
+                <h4 class="opblock-tag" @click.prevent="alterarExibicaoHistorico()">
+                    <span>Histórico</span>
+                    <small>
+                        <div class="markdown">Histórico das integrações</div>
+                    </small>
+                </h4>
+                <div v-if="podeExibirHistorico" style="height: auto; border: none; margin: 0px; padding: 0px">
+                    <span v-for="itemEsquema in integrador.esquemaHistorico.itens">
+                        <integradores-itemesquemahistorico :integrador="integrador" :itemEsquema="itemEsquema"></integradores-itemesquemahistorico>
+                    </span>
+                </div>
+            </div>
+        </span>
+        <span>
+            <div class="opblock-tag-section">
                 <h4 class="opblock-tag" @click.prevent="alterarExibicaoLogger()">
                     <span>Logger</span>
                     <small>
