#1516 $83843 - Adicionado filtro na tela NFe>Notas Fiscais para buscar por nf's (corrigidas as situações do pull request)

--- a/Glass/Vue/NotasFiscais/Templates/LstNotasFiscais.Filtro.html
+++ b/Glass/Vue/NotasFiscais/Templates/LstNotasFiscais.Filtro.html
@@ -178,8 +178,8 @@
     </div>
     <div>
         <span class="form-group">
-            <input id="nfeSemAnexo" type="checkbox" v-model="filtroAtual.nfeSemAnexo" />
-            <label for="nfeSemAnexo">NF-e sem anexos</label>
+            <input id="apenasNotasFiscaisSemAnexo" type="checkbox" v-model="filtroAtual.apenasNotasFiscaisSemAnexo" />
+            <label for="apenasNotasFiscaisSemAnexo">NF-e sem anexos</label>
             <button class="botaoPesquisar" v-on:click.prevent="filtrar" title="Pesquisar"></button>
         </span>
     </div>
