--- a/Glass/Relatorios/rptListaPedidosSimples.rdlc
+++ b/Glass/Relatorios/rptListaPedidosSimples.rdlc
@@ -381,14 +381,14 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="QtdePecas">
+                    <Textbox Name="IsPedidoReposicao">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!QtdePecas.Value</Value>
+                              <Value>=Fields!QtdePecasPai.Value</Value>
                               <Style>
                                 <FontSize>8pt</FontSize>
                               </Style>
@@ -399,7 +399,7 @@
                           </Style>
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>QtdePecas</rd:DefaultName>
+                      <rd:DefaultName>IsPedidoReposicao</rd:DefaultName>
                       <Style>
                         <BackgroundColor>=IIf((RowNumber(Nothing) Mod 2 = 0),"White", "#EFF3FB")</BackgroundColor>
                         <PaddingLeft>2pt</PaddingLeft>
@@ -542,14 +542,14 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="Textbox12">
+                    <Textbox Name="CustoPedido">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Sum(Fields!QtdePecas.Value)</Value>
+                              <Value>=Sum(Fields!QtdePecasPai.Value)</Value>
                               <Style>
                                 <FontSize>8pt</FontSize>
                               </Style>
@@ -560,7 +560,7 @@
                           </Style>
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>Textbox12</rd:DefaultName>
+                      <rd:DefaultName>CustoPedido</rd:DefaultName>
                       <Style>
                         <BackgroundColor>White</BackgroundColor>
                         <PaddingLeft>2pt</PaddingLeft>
@@ -711,7 +711,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Sum(Fields!QtdePecas.Value)</Value>
+                              <Value>=Sum(Fields!QtdePecasPai.Value)</Value>
                               <Style>
                                 <FontSize>8pt</FontSize>
                                 <FontWeight>Bold</FontWeight>
@@ -1341,6 +1341,10 @@
         </Field>
         <Field Name="QtdePecas">
           <DataField>QtdePecas</DataField>
+          <rd:TypeName>System.Int64</rd:TypeName>
+        </Field>
+        <Field Name="QtdePecasPai">
+          <DataField>QtdePecasPai</DataField>
           <rd:TypeName>System.Int64</rd:TypeName>
         </Field>
         <Field Name="RptBairro">
