--- a/Glass/Vue/_Compartilhado/Templates/ListaSelecaoTiposPessoa.html
+++ b/Glass/Vue/_Compartilhado/Templates/ListaSelecaoTiposPessoa.html
@@ -1,2 +1,2 @@
-﻿<lista-selecao-id-valor v-bind:item-selecionado.sync="tipoPessoaAtual" v-bind:funcao-recuperar-itens="buscarTiposPessoa">
+﻿<lista-selecao-id-valor v-bind:item-selecionado.sync="tipoPessoaAtual" v-bind:funcao-recuperar-itens="buscarTiposPessoa" campo-id="codigo">
 </lista-selecao-id-valor>
