--- a/Glass/Relatorios/OrdemCarga/rptPedidosOrdemCarga.rdlc
+++ b/Glass/Relatorios/OrdemCarga/rptPedidosOrdemCarga.rdlc
@@ -26,7 +26,7 @@
                   <CellContents>
                     <Textbox Name="Textbox3">
                       <CanGrow>true</CanGrow>
-                      <KeepTogether>true</KeepTogether>
+                      <KeepTogether>false</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
@@ -63,7 +63,7 @@
                   <CellContents>
                     <Textbox Name="Textbox5">
                       <CanGrow>true</CanGrow>
-                      <KeepTogether>true</KeepTogether>
+                      <KeepTogether>false</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
@@ -100,7 +100,7 @@
                   <CellContents>
                     <Textbox Name="Textbox7">
                       <CanGrow>true</CanGrow>
-                      <KeepTogether>true</KeepTogether>
+                      <KeepTogether>false</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
@@ -137,7 +137,7 @@
                   <CellContents>
                     <Textbox Name="Textbox8">
                       <CanGrow>true</CanGrow>
-                      <KeepTogether>true</KeepTogether>
+                      <KeepTogether>false</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
@@ -179,7 +179,7 @@
                   <CellContents>
                     <Textbox Name="Textbox2">
                       <CanGrow>true</CanGrow>
-                      <KeepTogether>true</KeepTogether>
+                      <KeepTogether>false</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
@@ -210,7 +210,7 @@
                   <CellContents>
                     <Textbox Name="Textbox4">
                       <CanGrow>true</CanGrow>
-                      <KeepTogether>true</KeepTogether>
+                      <KeepTogether>false</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
@@ -241,7 +241,7 @@
                   <CellContents>
                     <Textbox Name="Textbox6">
                       <CanGrow>true</CanGrow>
-                      <KeepTogether>true</KeepTogether>
+                      <KeepTogether>false</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
@@ -272,7 +272,7 @@
                   <CellContents>
                     <Textbox Name="Textbox1">
                       <CanGrow>true</CanGrow>
-                      <KeepTogether>true</KeepTogether>
+                      <KeepTogether>false</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
